# env-guard

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/env_guard/: main.py  scanner.py
tests/: test_checker.py  test_main.py  test_scanner.py
