[project]
name = "env-guard"
version = "0.1.0"
description = "Scan your project for missing or unused environment variables"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hatchling>=1.30.1",
    "rich>=15.0.0",
    "typer>=0.26.4",
]

[project.scripts]
env-guard = "env_guard.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/env_guard"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
